# oed-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  main.py
app/core/: config.py
app/db/: database.py  queries.py
app/models/: oed_data.py  query_params.py
app/routers/: data.py  metadata.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
db_init/: oed_01_init.sql
db_migration/: oed_02_df.sql  oed_03_data.sql  oed_04_materialized_views.sql  oed_05_comments.sql
tests/: README.md  conftest.py  test_api_integration.py  test_auto_pagination.py  test_data_sql.py  test_metadata_sql.py
