[project]
name = "oedb-rde"
version = "0.1.0"
description = "FastAPI application providing access to enzyme kinetic data from the OED database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.3",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.11.7",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
    "requests>=2.32.3",
    "marimo>=0.13.4",
    "python-lsp-server>=1.12.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
